--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<% provide(:page_title, 'Contact Us') %>
+<% provide(:body_name, 'contact') %>
+    <%= render "pages/map" %>
+    <%= render "pages/contact_us" %>
