--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,4 +1,4 @@
 <%= image_tag food.image_url, alt: food.name.to_s , class: 'img-responsive' %>
-  <h4><%= food.name %> <span><%= food.price %></span></h4>
+  <h4><%= food.name %> <span><%= number_to_currency(food.price, precision: 0, separator: '.', delimiter: '.', unit: '') + ' VND' %></span></h4>
   <p><%= food.description %></p>
   <p><%= food.section %></p>
