--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,6 +1,8 @@
 <div class="" id="display">
 <%= image_tag food.image_url, alt: food.name.to_s , class: 'img-responsive' %>
+<div class="info text-left">
   <h4><%= food.name %> <span><%= food.price %></span></h4>
   <p><%= food.description %></p>
   <p><%= food.section %></p>
+</div>
 </div>
