--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Restaurant</title>
+    <title><%=yield(:page_title) %> | GOOGEATS</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="images/favicon.html" />
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'pace.min', "data-turbolinks-track" => true  %>
   </head>
 
-  <body>
+  <body class="<%=yield(:body_name) %>"> 
     <%= yield %>
+    <script>
+      var swiper = new Swiper('.swiper-container', {
+        pagination: '.swiper-pagination',
+        paginationClickable: true,
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev',
+        parallax: true,
+        speed: 600,
+        autoplay: 2500,
+        onSlideChangeStart: (function (swiper) {
+          var active = swiper.slides[swiper.activeIndex];
+          var animated = $(active).find('*[data-animation]');
+          $.each(animated, function (key, value) {
+            $(value).addClass($(value).data('animation'));
+            $(value).addClass('animated');
+          });
+        })
+      });
+  </script>
   </body>
 </html>
