--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<% provide(:page_title, 'Contact Us') %>
+<% provide(:body_name, 'home-page') %>
+    <%= render "pages/slider" %>
+    <%= render "pages/chef" %>
+    <%= render "pages/book" %>
+    <%= render "pages/recent_promotions" %>
+    <%= render "pages/location" %>
+    <%= render "pages/menu1" %>
