--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,4 +1,16 @@
 <%= image_tag food.image_url, alt: food.name.to_s , class: 'img-responsive' %>
+  <span id="average_rating"></span><%= @food.average_rating %>
   <h4><%= food.name %> <span><%= number_to_currency(food.price, precision: 0, separator: '.', delimiter: '.', unit: '') + ' VND' %></span></h4>
   <p><%= food.description %></p>
   <p><%= food.section %></p>
+  <!-- Reviews -->
+  <div class="ajax-form-create">
+    <%= render "ratings/form", food: food %>
+  </div>
+  <script>
+  $('#average_rating').raty({
+    path: '/assets',
+    readOnly: true,
+    score: <%= food.average_rating %>
+  });
+</script>
