--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,15 @@
 @import "animate";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "swiper.min";
+
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
 
 .menu-box .thumb {
     float: left;
