--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,33 +8,16 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="shortcut icon" href="images/favicon.html" />
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'pace.min', "data-turbolinks-track" => true  %>
   </head>
 
   <body class="<%=yield(:body_name) %>"> 
+    <div class="container">
+    <%= render "layouts/nav" %>
     <%= yield %>
-    <script>
-      var swiper = new Swiper('.swiper-container', {
-        pagination: '.swiper-pagination',
-        paginationClickable: true,
-        nextButton: '.swiper-button-next',
-        prevButton: '.swiper-button-prev',
-        parallax: true,
-        speed: 600,
-        autoplay: 2500,
-        onSlideChangeStart: (function (swiper) {
-          var active = swiper.slides[swiper.activeIndex];
-          var animated = $(active).find('*[data-animation]');
-          $.each(animated, function (key, value) {
-            $(value).addClass($(value).data('animation'));
-            $(value).addClass('animated');
-          });
-        })
-      });
-  </script>
+    <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
