--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,11 @@ body {
     display: block;
     font-family: "Lato", sans-serif;
 }
+#coupon {
+  text-align: center;
+  width: 80%
+}
+
+#checkout {
+  width: 158px;
+}
