--- a/app/views/ratings/create.js.erb
+++ b/app/views/ratings/create.js.erb
@@ -1,2 +1,3 @@
   $('.ajax-form-create').html('<%= j render "ratings/form", food: @food %>');
+  ajax-form-create
   $('#average_rating').raty({path: '/assets', readOnly: true, score: <%= @food.average_rating %> });
