--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,24 +4,14 @@
         <div class="row-xs-12">
           <div class="divider"></div>
           <div class="text-center">
-            <a href="index-2.html"><img src="images/logos/logo.png" alt="" class="logo">
-            </a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-9">
-          <ul class="footer-links">
-            <li><a href="#">Privacy Policy</a>
-            </li>
-            <li><a href="blog-index.html">Blog</a>
-            </li>
-            <li><a href="contact.html">Contact</a>
-            </li>
-          </ul>
         </div>
         <div class="col-sm-3">
-          <p>© ZUPA 2016</p>
+          <p>© GOOGEATS 2017</p>
         </div>
       </div>
     </div>
