--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,3 @@
 <% provide(:page_title, 'Contact Us') %>
 <% provide(:body_name, 'home-page') %>
-    <%= render "pages/slider" %>
-    <%= render "pages/chef" %>
-    <%= render "pages/book" %>
-    <%= render "pages/recent_promotions" %>
-    <%= render "pages/location" %>
+    <%= render "pages/jumbotron" %>
