--- a/app/views/pages/_contact_us.html.erb
+++ b/app/views/pages/_contact_us.html.erb
@@ -2,6 +2,9 @@
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 col-md-12">
         <div class="row">
+          <div class="col-sm-8">
+           <%= render "pages/map2" %>
+          </div>
           <div class="col-sm-4 col-xs-12">
             <address>
                 <strong>GOOD EATS - Healthy Kitchen</strong><br />
@@ -23,35 +26,7 @@
               <a href="#"><i class="fa fa-youtube social-icon-small" aria-hidden="true"></i></a>
             </p>
           </div>
-          <div class="col-sm-8">
-            <form name="contact_form" id="contact_form" method="post" class="form-horizontal">
-              <div class="form-group">
-                <label class="col-sm-2 control-label">Name</label>
-                <div class="col-sm-10 animated-form-control">
-                  <input type="text" name="name" class="text form-control" id="Form_Form_name" required="required" aria-required="true" />
-                </div>
 
-              </div>
-              <div class="form-group">
-                <label class="col-sm-2 control-label">E-mail</label>
-                <div class="col-sm-10 animated-form-control">
-                  <input type="email" name="email" class="form-control" required="required" />
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-sm-2 control-label">Message</label>
-                <div class="col-sm-10 animated-form-control">
-                  <textarea name="message" class="textarea form-control" required="required" rows="5" cols="20"></textarea>
-                </div>
-              </div>
-              <div class="form-group">
-                <br/>
-                <div class="col-sm-12 col-md-12 ">
-                  <a id="submit_btn" class="btn btn-primary pull-right">Send</a>
-                </div>
-              </div>
-            </form>
-          </div>
         </div>
       </div>
     </div>
